--- a/cssinterno copy.html
+++ b/cssinterno copy.html
@@ -6,7 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSSIEXTERNO</title>
 
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+    margin: 0;
+}
+
+.card {
+    width: 500px;
+    height: fit-content;
+    border: 3px solid black;
+    border-radius: 25px;
+    background-color: aliceblue;
+    margin: 10px;
+}
+
+.card-image {
+    width: 100px;
+    border-radius: 50%;
+}
+
+.card-image img {
+    width: 70%;
+    height: 70%;
+}
+
+.card-title {
+    font-size: 35px;
+
+}
+
+.card-title .card-title-name {
+    color: rgb(75, 166, 246);
+}
+
+.card-mensagem span {
+    font-style: italic;
+    font-weight: bold;
+    color: #B11A1A;
+}
+</style>
+
 </head>
 
 <body>
